# internal/domains/tenant/dto/admin_tenant_response.go
@@ -2,11 +2,13 @@ package dto
 
 import "time"
 
-// TenantResponse adalah data yang akan dikirim ke frontend Admin
+// TenantResponse adalah data yang akan dikirim ke client
 type TenantResponse struct {
-	ID        string    `json:"id"`
-	Name      string    `json:"name"`
-	Slug      string    `json:"slug"`
-	Status    string    `json:"status"` // active, inactive, suspended
-	CreatedAt time.Time `json:"createdAt"`
+	ID        string     `json:"id"`
+	Name      string     `json:"name"`
+	Slug      string     `json:"slug"`
+	Status    string     `json:"status"` // active | inactive | suspended
+	CreatedAt time.Time  `json:"createdAt"`
+	UpdatedAt time.Time  `json:"updatedAt"`
+	DeletedAt *time.Time `json:"deletedAt,omitempty"`
 }
